<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
            android:key="theme"
            android:title="@string/theme"
            android:summary="%s"
            android:entries="@array/theme_options"
            android:entryValues="@array/theme_values"
            android:defaultValue="system"
            android:layout="@layout/settings_home_card"
            app:icon="@drawable/ic_theme" />

    <Preference
            android:layout="@layout/settings_home_card"
            android:title="@string/category_general"
            android:summary="@string/category_general_summary"
            app:icon="@drawable/ic_settings"
            android:fragment="me.magnum.melonds.ui.settings.fragments.GeneralPreferencesFragment" />

    <Preference
            android:layout="@layout/settings_home_card"
            android:title="@string/category_roms"
            android:summary="@string/category_roms_summary"
            app:icon="@drawable/ic_folder"
            android:fragment="me.magnum.melonds.ui.settings.fragments.RomsPreferencesFragment" />

    <Preference
            android:layout="@layout/settings_home_card"
            android:title="@string/category_save_files"
            android:summary="@string/category_save_files_summary"
            app:icon="@drawable/ic_file"
            android:fragment="me.magnum.melonds.ui.settings.fragments.SaveFilesPreferencesFragment" />

    <Preference
            android:layout="@layout/settings_home_card"
            android:title="@string/category_system"
            android:summary="@string/category_system_summary"
            app:icon="@drawable/ic_firmware"
            android:fragment="me.magnum.melonds.ui.settings.fragments.SystemPreferencesFragment" />

    <Preference
            android:layout="@layout/settings_home_card"
            android:title="@string/category_video"
            android:summary="@string/category_video_summary"
            app:icon="@drawable/ic_video"
            android:fragment="me.magnum.melonds.ui.settings.fragments.VideoPreferencesFragment" />

    <Preference
            android:layout="@layout/settings_home_card"
            android:title="@string/category_audio"
            android:summary="@string/category_audio_summary"
            app:icon="@drawable/ic_audio"
            android:fragment="me.magnum.melonds.ui.settings.fragments.AudioPreferencesFragment" />

    <Preference
            android:layout="@layout/settings_home_card"
            android:title="@string/input"
            android:summary="@string/input_summary"
            app:icon="@drawable/ic_input"
            android:fragment="me.magnum.melonds.ui.settings.fragments.InputPreferencesFragment" />

    <Preference
            android:layout="@layout/settings_home_card"
            android:title="@string/cheats"
            android:summary="@string/cheats_summary"
            app:icon="@drawable/ic_cheat"
            android:fragment="me.magnum.melonds.ui.settings.fragments.CheatsPreferencesFragment" />

    <Preference
            android:layout="@layout/settings_home_card"
            android:title="@string/retroachievements"
            android:summary="@string/retroachievements_summary"
            app:icon="@drawable/ic_trophy"
            android:fragment="me.magnum.melonds.ui.settings.fragments.RetroAchievementsPreferencesFragment" />
</PreferenceScreen>